Who we are: @320px - basic responsive typographic styles and drops applied

--- a/src/sass/tools/_reset.scss
+++ b/src/sass/tools/_reset.scss
@@ -24,7 +24,7 @@ summary {
 body {
     padding-top: var(--site-space-lg);
     font-family: var(--copy);
-    font-size: var(--font-base);
+    //font-size: var(--font-base);
     color: var(--black);
     background: var(--off-white);
     -webkit-font-smoothing: antialiased;
