--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -98,6 +98,7 @@
     --mb-drop-small: 0.75rem;
     --mb-drop-base: 1rem;
     --mb-drop-medium: 1.5rem;
+    --mb-drop-large: 3rem;
 
     /* Effects
     --------------------------------------------------------------------------------------------------------------- */
