--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -28,14 +28,18 @@
         }
 
         .name {
-            font-family: var(--copy);
-            font-size: var(--font-root);
+            font-family: var(--copy-med);
+            font-size: var(--font-base-plus);
+            font-weight: var(--weight-regular-plus);
         }
 
         .role {
-            font-size: var(--font-root-plus);
-            text-transform: uppercase;
+            font-size: var(--font-base);
             color: var(--meta);
+
+            @media (min-width: 880px) {
+                font-size: var(--font-base-plus);
+            }
         }
     }
 
@@ -66,12 +70,13 @@
 
         padding-left: 1.5rem;
         padding-right: 1.5rem;
-        margin: 0 auto 7rem;
+        margin: 0 auto var(--mb-drop-large);
 
         display: grid;
         grid-template-columns: 1fr;
 
         @media (min-width: 880px) {
+            margin: 0 auto 7rem;
             padding-left: 4.5rem;
             padding-right: 4.5rem;
             grid-template-columns: repeat(12, 1fr);
@@ -132,8 +137,12 @@
 
         p {
             margin-bottom: 0.5rem;
-            font-size: var(--font-base-plus);
+            font-size: var(--font-base);
             color: var(--mid-black);
+
+            @media (min-width: 880px) {
+                font-size: var(--font-base-plus);
+            }
         }
 
         p:first-of-type {
@@ -146,6 +155,8 @@
         }
 
         .link {
+            margin-bottom: var(--mb-drop-large);
+            display: block;
             font-family: var(--copy-med);
             font-size: var(--font-small);
             text-transform: uppercase;
@@ -200,7 +211,7 @@
         }
 
         .section-title {
-            margin-bottom: var(--drop-small);
+            margin-bottom: var(--mb-drop-base);
             font-size: var(--font-base-plus);
             text-transform: uppercase;
             line-height: var(--lh-medium);
@@ -208,10 +219,16 @@
         }
 
         p {
-            margin-bottom: 0.5rem;
+            margin-bottom: var(--mb-drop-large);
             font-family: var(--titling);
             font-size: clamp(2rem, 7.5vw, 4rem);
+            line-height: 1.2;
             color: var(--black);
+
+            @media (min-width: 880px) {
+                margin-bottom: 0.5rem;
+                line-height: 1.1;
+            }
         }
 
         .link {
@@ -270,24 +287,29 @@
         }
 
         .title {
+            margin-bottom: var(--mb-drop-base);
             font-size: clamp(2rem, 4.5vw, 2.75rem);
         }
 
         p {
             width: 100%;
+            font-size: var(--font-base);
 
             @media (min-width: 960px) {
                 width: 39.5%;
                 max-width: 512px;
+                font-size: var(--font-base-plus);
             }
         }
 
         .images {
-            padding: 3.75rem 0 4.625rem 0;
+            padding-top: 3rem;
             display: grid;
             grid-template-columns: 1fr;
+            justify-items: center;
 
             @media (min-width: 520px) {
+                padding: 3.75rem 0 4.625rem 0;
                 grid-template-columns: repeat(12, 1fr);
                 column-gap: var(--gutter-large);
             }
@@ -338,41 +360,55 @@
         }
 
         .section-title {
+            margin-bottom: var(--mb-drop-base);
             font-size: clamp(2rem, 4.5vw, 2.75rem);
         }
 
         p {
             width: 100%;
+            font-size: var(--font-base);
 
             @media (min-width: 960px) {
                 width: 39.5%;
                 max-width: 512px;
+                font-size: var(--font-base-plus);
             }
         }
 
         .sub-title {
             margin-bottom: 1.25rem;
-            font-size: var(--font-base-plus);
+            font-size: var(--font-base);
             text-transform: uppercase;
             color: var(--mid-black);
+
+            @media (min-width: 960px) {
+                font-size: var(--font-base-plus);
+            }
         }
 
         .images {
+            margin-bottom: 3rem;
             display: grid;
             grid-template-columns: 1fr;
-            margin-bottom: 3rem;
 
             @media (min-width: 880px) {
                 grid-template-columns: repeat(12, 1fr);
-                grid-gap: 48px;
+                column-gap: var(--gutter-large);
             }
+        }
+
+        .lh-col__images,
+        .rh-col__images {
+            margin-bottom: var(--mb-drop-large);
+            display: grid;
+            //   justify-items: center;
         }
 
         @media (min-width: 880px) {
             .lh-col__images,
             .rh-col__images {
-                display: grid;
                 column-gap: var(--gutter-large);
+                //    justify-items: unset;
             }
 
             .lh-col {
