--- a/src/sass/post-types/team.scss
+++ b/src/sass/post-types/team.scss
@@ -1,8 +1,5 @@
 /* team-member: scss for individual team member overlay
 ----------------------------------------------------------------------------- */
-// .single-bbwp_cpt_team {
-//     padding-top: 0;
-
 .team-member__overlay {
     position: fixed;
     top: 0;
@@ -15,6 +12,7 @@
 
     opacity: 0;
     visibility: hidden;
+    overflow-y: scroll;
 
     background-color: var(--black);
     color: var(--white);
@@ -56,19 +54,24 @@
         display: grid;
         grid-template-columns: 1fr;
 
+        figure {
+            margin-bottom: var(--mb-drop-medium);
+        }
+
         @media (min-width: 880px) {
             grid-template-columns: repeat(12, 1fr);
             grid-column-gap: var(--gutter-large);
+
+            figure {
+                margin-bottom: 6.5rem;
+                grid-column: span 4;
+            }
+
+            .description,
+            .project-info {
+                grid-column: span 5;
+            }
         }
-    }
-
-    figure {
-        grid-column: span 4;
-    }
-
-    .description,
-    .project-info {
-        grid-column: span 5;
     }
 
     .team-member-name,
@@ -91,10 +94,18 @@
         color: #c7c7c7;
     }
 
+    .description {
+        margin-bottom: var(--mb-drop-large);
+    }
+
     p {
         margin-bottom: 1.5rem;
-        font-size: var(--font-base-plus);
+        font-size: var(--font-base);
         color: var(--font-base-plus);
+
+        @media (min-width: 880px) {
+            font-size: var(--font-base-plus);
+        }
     }
 
     p:last-of-type {
@@ -106,11 +117,6 @@
         font-size: var(--font-small);
         text-transform: uppercase;
         color: var(--white);
-    }
-
-    // div.profile
-    .image {
-        margin-bottom: 74px;
     }
 
     // div.project
