--- a/src/sass/site-furniture/_navigation.scss
+++ b/src/sass/site-furniture/_navigation.scss
@@ -6,24 +6,37 @@
     display: none;
     background-color: var(--off-white);
 
+    @media (min-width: 880px) {
+        //margin-top: 0;
+    }
+
     &.show-nav {
+        height: 56px;
         width: 100%;
-        height: 10rem;
         padding-right: 1.5rem;
-        display: block;
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
 
         @media (min-width: 880px) {
             width: 390px;
             min-height: auto;
+            margin-top: 0;
             margin-right: 96px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: center;
         }
     }
 
     li {
         text-align: right;
+        margin-bottom: var(--drop-base);
+
+        @media (min-width: 880px) {
+            margin-bottom: 0;
+        }
 
         a {
             font-family: var(--copy);
