Banners: Clamp added to vertical and horizontal padding

--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -1,20 +1,15 @@
+@use '../utilities/mixins';
+
 /* banner
 ----------------------------------------------------------------------------- */
 .banner-home {
     position: relative;
     width: 100%;
-    padding-top: 4rem;
-    padding-bottom: 5rem;
-    padding-left: var(--site-pad-small);
-    padding-right: var(--site-pad-small);
+    padding-left: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
+    padding-right: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
+    padding-top: clamp(4rem, -4.883rem + 27.333vw, 14.25rem);
+    padding-bottom: clamp(5rem, -8.65rem + 42vw, 20.75rem);
     background-color: var(--off-white);
-
-    @media (min-width: 880px) {
-        padding-left: var(--site-pad-large);
-        padding-right: var(--site-pad-large);
-        padding-top: 14.25rem; // 228px
-        padding-bottom: 20.75rem; // 332px
-    }
 
     h1.statement {
         width: 100%;
@@ -32,8 +27,10 @@
 }
 
 .banner-standard {
-    padding-top: 9.375rem; // 150px
-    padding-bottom: 14.875rem; // 124px;
+    padding-top: clamp(4rem, -0.658rem + 14.333vw, 9.375rem);
+    padding-bottom: clamp(5rem, -3.558rem + 26.333vw, 14.875rem);
+    padding-left: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
+    padding-right: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
 
     .page-title {
         margin-bottom: var(--drop-small);
