--- a/src/sass/tools/_utilities.scss
+++ b/src/sass/tools/_utilities.scss
@@ -1,3 +1,5 @@
+@use '../utilities/mixins';
+
 /* utilities
 ----------------------------------------------------------------------------- */
 
@@ -6,48 +8,19 @@
 
 // basic 12 column grid, used as a utility class on components
 .grid {
-    display: grid;
-    grid-template-columns: 1fr;
-
-    @media (min-width: 960px) {
-        margin-bottom: 9rem;
-        grid-template-columns: repeat(12, 1fr);
-        grid-column-gap: var(--gutter-large);
-    }
+    @include mixins.grid;
 }
 
 // center content with a max-width of 1440px
-.contain {
-    width: 100%;
-    max-width: var(--site-width);
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    margin: 0 auto;
-
-    @media (min-width: 880px) {
-        padding-left: 4.5rem;
-        padding-right: 4.5rem;
-    }
-}
-
-// center content with a max-width of 1440px
+.contain,
 .container {
-    width: 100%;
-    max-width: var(--site-width);
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    margin: 0 auto;
-
-    @media (min-width: 880px) {
-        padding-left: 4.5rem;
-        padding-right: 4.5rem;
-    }
+    @include mixins.contain;
 }
 
 /* clearfix
 ----------------------------------------------------------------------------- */
 
-// style it like it's 2008..
+// style things like it's 2010..
 .group:after {
     content: '';
     display: table;
