--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -1,3 +1,5 @@
+@use '../utilities/mixins';
+
 /* work: scss for individual work pages / case-studies
 ----------------------------------------------------------------------------- */
 .case-study {
@@ -5,51 +7,40 @@
     margin-bottom: var(--site-space-lg);
     background-color: var(--white);
 
+    /* page-top
+    ------------------------------------------------------------------------- */
+
     .page-top {
         margin-bottom: var(--drop-medium);
-        display: grid;
-        grid-template-columns: 1fr;
+        @include mixins.grid;
 
-        .meta {
-            font-size: var(--font-base-plus);
-            text-transform: uppercase;
-            color: var(--mid-black);
-        }
-
-        .title {
-            font-family: var(--titling);
-            font-size: var(--font-medium);
-        }
-
+        .meta,
         .excerpt {
-            font-size: var(--font-base-plus);
             color: var(--mid-black);
-        }
-    }
-
-    @media (min-width: 960px) {
-        .page-top {
-            grid-template-columns: repeat(12, 1fr);
-            grid-column-gap: 48px;
         }
 
         .meta {
             grid-column: 1 / 3;
+            font-size: var(--font-base-plus);
+            text-transform: uppercase;
         }
 
         .title {
             grid-column: 1 / -1;
             grid-row: 2;
+            font-size: var(--font-medium);
         }
 
         .excerpt {
             grid-column: 8 / -1;
             grid-row: 2;
+            font-size: var(--font-base-plus);
             line-height: var(--lh-base);
         }
     }
 
-    // primary content ----------------------------------------------------------
+    /* primary-content
+    ------------------------------------------------------------------------- */
     .primary-content {
         margin-bottom: var(--drop-big);
     }
@@ -65,24 +56,14 @@
     }
 
     .primary-content__info {
-        display: grid;
-        grid-template-columns: 1fr;
+        @include mixins.grid;
 
-        @media (min-width: 960px) {
-            grid-template-columns: repeat(12, 1fr);
-            grid-column-gap: 48px;
+        .lh-col {
+            grid-column: 1 / 7;
+        }
 
-            .lh-col {
-                grid-column: 1 / 7;
-            }
-
-            .details {
-                grid-column: 1 / 7;
-            }
-
-            .rh-col {
-                grid-column: 8 / -1;
-            }
+        .rh-col {
+            grid-column: 8 / -1;
         }
     }
 
@@ -139,12 +120,17 @@
             }
         }
 
+        .title,
+        li,
+        .type {
+            font-size: var(--font-base-plus);
+            color: var(--mid-black);
+        }
+
         h3.title {
             margin-bottom: 0.25rem;
             font-family: var(--copy);
-            font-size: var(--font-base-plus);
             text-transform: uppercase;
-            color: var(--mid-black);
         }
 
         .service-type {
@@ -156,15 +142,8 @@
             }
 
             li {
-                font-size: var(--font-base-plus);
                 font-weight: 500;
-                color: var(--mid-black);
             }
-        }
-
-        .type {
-            font-family: var(--copy-med);
-            font-size: var(--font-base-plus);
         }
 
         .sector,
@@ -184,8 +163,8 @@
         }
     }
 
-    // flexible content styles -----------------------------------------------------------------------------
-    // shared styles -----------------------------------------------------------------------------
+    /* flexible content styles 
+    ----------------------------------------------------------------------------------------- */
     .flexible-content__case-study {
         padding-top: 6rem;
         background-color: var(--off-white);
@@ -197,226 +176,9 @@
         margin-bottom: var(--drop-medium);
     }
 
-    // the classes below replace the .contain utility class
+    /*  image / video media blocks 
+    ----------------------------------------------------------------------------------------- */
     .image-text,
-    .media__half-width,
-    .media__full-width,
-    // .full-width-media,
-    .primary-media {
-        width: 100%;
-        max-width: var(--site-width);
-        padding-left: var(--site-pad-small);
-        padding-right: var(--site-pad-small);
-        margin-left: auto;
-        margin-right: auto;
-
-        @media (min-width: 880px) {
-            padding-left: var(--site-pad-large);
-            padding-right: var(--site-pad-large);
-        }
-    }
-
-    .container {
-        width: 100%;
-        max-width: 1440px;
-        padding: 1.5rem 4.5rem 0 4.5rem;
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr;
-
-        @media (min-width: 800px) {
-            grid-template-columns: repeat(12, 1fr);
-            grid-column-gap: 48px;
-        }
-    }
-
-    // specific flexible content styles ---------------------------------------------------------
-    // text ---------------------------------------------------------------------
-
-    .text-block {
-        max-width: 1296px;
-        padding-top: 1.5rem;
-        border-top: 1.5px solid var(--mid-black);
-        margin: 0 auto;
-    }
-
-    .rich-text,
-    .stats {
-        @media (min-width: 800px) {
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            grid-column-gap: 48px;
-        }
-    }
-
-    .title-image {
-        grid-column: 1 / 7;
-        grid-row: 1;
-        font-family: var(--titling);
-        font-size: var(--font-medium);
-    }
-
-    .title {
-        margin-bottom: var(--drop-medium);
-    }
-
-    .text {
-        grid-column: 8 / -1;
-
-        p {
-            margin-bottom: var(--drop-medium);
-            font-size: var(--font-base-plus);
-        }
-
-        strong {
-            font-family: var(--copy-med);
-            font-weight: 500;
-        }
-    }
-
-    .stats {
-        li {
-            margin-bottom: 34px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            // gap: 2rem;
-
-            @media (min-width: 800px) {
-                flex-direction: row;
-            }
-        }
-
-        li:nth-of-type(odd) {
-            grid-column: 2 / 7;
-        }
-
-        li:nth-of-type(even) {
-            grid-column: 8 / -1;
-        }
-
-        .stat {
-            min-width: 35%;
-            align-self: flex-start;
-            font-family: var(--titling);
-            font-size: 4rem;
-            text-align: left;
-            transform: translateY(-16px);
-        }
-
-        .description {
-            flex-grow: 1;
-            font-size: var(--font-base-plus);
-        }
-    }
-
-    // testimonial ---------------------------------------------------------------------
-    .testimonial {
-        padding: 4.75rem 0; // 76px 0
-        margin-top: var(--site-space-lg);
-        margin-bottom: var(--site-space-lg);
-        background-color: var(--white);
-
-        .author-meta {
-            padding-top: var(--site-space-sm);
-            border-top: 1.5px solid var(--mid-black);
-            margin-bottom: var(--drop-small);
-
-            @media (min-width: 800px) {
-                grid-column: 2 / 4;
-            }
-
-            .author,
-            .role,
-            .organisation {
-                display: block;
-
-                font-size: var(--font-base-plus);
-            }
-
-            .author {
-                font-family: var(--copy-med);
-            }
-
-            .role,
-            .organisation {
-                font-family: var(--copy);
-                color: var(--mid-black);
-            }
-        }
-
-        .text {
-            font-family: var(--titling);
-            font-size: var(--font-medium);
-
-            @media (min-width: 800px) {
-                grid-column: 5 / 12;
-            }
-        }
-
-        blockquote {
-            position: relative;
-        }
-
-        blockquote:before,
-        blockquote:after {
-            position: absolute;
-        }
-
-        blockquote:before {
-            content: open-quote;
-            top: -0.25rem;
-            left: -1rem;
-        }
-
-        blockquote:after {
-            content: close-quote;
-        }
-    }
-
-    // image-text ---------------------------------------------------------------------
-    .image-text {
-        .image {
-            grid-column: 1 / 7;
-        }
-
-        .text {
-            grid-column: 8 / -1;
-        }
-
-        p {
-            margin-bottom: var(--drop-medium);
-        }
-
-        p:last-of-type {
-            margin-bottom: var(--drop-small);
-        }
-
-        .heading {
-            font-family: var(--titling);
-            font-size: var(--font-medium);
-        }
-
-        .meta {
-            margin-bottom: var(--drop-medium);
-            display: block;
-            font-size: var(--font-base-plus);
-            text-transform: uppercase;
-            color: var(--mid-black);
-        }
-
-        .link {
-            margin-bottom: var(--drop-medium);
-            display: block;
-            font-family: var(--copy-med);
-            font-size: var(--font-small);
-            font-weight: var(--weight-regular-plus);
-            text-transform: uppercase;
-            color: var(--black);
-        }
-    }
-
-    // image / video media blocks -----------------------------------------------------------------------------
     .two-cols-media,
     .full-width-video,
     .full-screen-video,
@@ -424,16 +186,12 @@
     .full-width-image {
         width: 100%;
         max-width: 1440px;
-        padding: 0 4.5rem;
+        @include mixins.horizontal-space;
         margin: 0 auto var(--drop-medium);
     }
 
     .two-cols-media {
-        @media (min-width: 800px) {
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            grid-column-gap: 48px;
-        }
+        @include mixins.grid;
 
         .lh-video,
         .rh-video,
@@ -494,9 +252,156 @@
         margin-bottom: var(--drop-medium);
     }
 
-    // special thanks ----------------------------------------------------------
+    /* text block
+    ----------------------------------------------------------------------------------------- */
+    .text-block {
+        max-width: 1296px;
+        padding-top: 1.5rem;
+        border-top: 1.5px solid var(--mid-black);
+        margin: 0 auto;
 
-    // text ---------------------------------------------------------------------
+        .rich-text,
+        .stats {
+            @include mixins.grid;
+        }
+
+        .title-image {
+            grid-column: 1 / 7;
+            grid-row: 1;
+            font-family: var(--titling);
+            font-size: var(--font-medium);
+        }
+
+        .title {
+            margin-bottom: var(--drop-medium);
+        }
+
+        .text {
+            grid-column: 8 / -1;
+
+            p {
+                margin-bottom: var(--drop-medium);
+                font-size: var(--font-base-plus);
+            }
+
+            strong {
+                font-family: var(--copy-med);
+                font-weight: 500;
+            }
+        }
+    }
+
+    // image-text ---------------------------------------------------------------------
+    .image-text {
+        .image {
+            grid-column: 1 / 7;
+        }
+
+        .text {
+            grid-column: 8 / -1;
+        }
+
+        p {
+            margin-bottom: var(--drop-medium);
+        }
+
+        p:last-of-type {
+            margin-bottom: var(--drop-small);
+        }
+
+        .heading {
+            font-family: var(--titling);
+            font-size: var(--font-medium);
+        }
+
+        .meta {
+            margin-bottom: var(--drop-medium);
+            display: block;
+            font-size: var(--font-base-plus);
+            text-transform: uppercase;
+            color: var(--mid-black);
+        }
+
+        .link {
+            margin-bottom: var(--drop-medium);
+            display: block;
+            font-family: var(--copy-med);
+            font-size: var(--font-small);
+            font-weight: var(--weight-regular-plus);
+            text-transform: uppercase;
+            color: var(--black);
+        }
+    }
+
+    /*  testimonial -------------------------------------------------------------------------- */
+    .testimonial {
+        // note: testimonial uses container class to add grid
+        padding: 4.75rem 0; // 76px 0
+        margin-top: var(--site-space-lg);
+        margin-bottom: var(--site-space-lg);
+        background-color: var(--white);
+
+        .container {
+            @include mixins.grid;
+        }
+
+        .author-meta {
+            padding-top: var(--site-space-sm);
+            border-top: 1.5px solid var(--mid-black);
+            margin-bottom: var(--drop-small);
+
+            @media (min-width: 800px) {
+                grid-column: 2 / 4;
+            }
+
+            .author,
+            .role,
+            .organisation {
+                display: block;
+                font-size: var(--font-base-plus);
+            }
+
+            .author {
+                font-family: var(--copy-med);
+            }
+
+            .role,
+            .organisation {
+                font-family: var(--copy);
+                color: var(--mid-black);
+            }
+        }
+
+        .text {
+            font-family: var(--titling);
+            font-size: var(--font-medium);
+
+            @media (min-width: 800px) {
+                grid-column: 5 / 12;
+            }
+        }
+
+        blockquote {
+            position: relative;
+        }
+
+        blockquote:before,
+        blockquote:after {
+            position: absolute;
+        }
+
+        blockquote:before {
+            content: open-quote;
+            top: -0.25rem;
+            left: -1rem;
+        }
+
+        blockquote:after {
+            content: close-quote;
+        }
+    }
+
+    // more like this ---------------------------------------------------------------------
     .more-like-this {
         padding-top: 4.875rem;
         padding-bottom: 4rem;
@@ -538,43 +443,6 @@
                 font-family: var(--copy-med);
                 font-size: var(--font-base-plus);
             }
-        }
-    }
-}
-
-.special-thanks {
-    .title {
-        margin-bottom: var(--drop-medium);
-        grid-column: 1 / 7;
-        grid-row: 1;
-        font-family: var(--titling);
-        font-size: 64px;
-    }
-
-    .rich-text {
-        @media (min-width: 800px) {
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            grid-column-gap: 48px;
-        }
-    }
-
-    .hold-me {
-        grid-column: 8 / -1;
-
-        p {
-            margin-bottom: var(--drop-medium);
-            font-size: var(--font-base-plus);
-        }
-
-        h3 {
-            text-transform: uppercase;
-        }
-
-        span {
-            font-family: var(--copy-med);
-            font-size: var(--font-base-plus);
-            font-weight: 500;
         }
     }
 }
