--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -12,17 +12,12 @@
     background-color: var(--off-white);
 
     h1.statement {
-        width: 100%;
+        width: 25ch;
         max-width: 1296px;
-        margin: 0 auto;
         font-family: var(--titling);
         font-size: clamp(2.125rem, 7.5vw, 4.5rem);
         font-weight: 400;
-        line-height: 1.2;
-
-        @media (min-width: 880px) {
-            line-height: var(--lh-medium);
-        }
+        line-height: 1.08;
     }
 }
 
