Re-factor: h1 and h2 clamp styles updated with comments, additional (2rem) mb drop added, selected work typo corrected

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -94,6 +94,7 @@
     --mb-drop-small: 0.75rem;
     --mb-drop-base: 1rem;
     --mb-drop-medium: 1.5rem;
+    --mb-drop-double: 2rem;
     --mb-drop-large: 3rem;
 
     /* Effects
