--- a/src/sass/type/_typography.scss
+++ b/src/sass/type/_typography.scss
@@ -18,12 +18,14 @@ h6 {
 
 h1,
 .h1 {
-    font-size: clamp(2rem, 7.5vw, 2.75rem);
+    // clamp active between 320 - 120px
+    font-size: clamp(2rem, 1.7rem + 1.5vw, 2.75rem);
 }
 
 h2,
 .h2 {
-    font-size: clamp(2rem, 7.5vw, 2.75rem);
+    // clamp active between 320 - 120px
+    font-size: clamp(2rem, 1.7rem + 1.5vw, 2.75rem);
 }
 
 h3,
@@ -37,9 +39,6 @@ h4,
 }
 
 p {
-    font-size: var(--font-base);
-
-    @media (min-width: 880px) {
-        font-size: var(--font-plus);
-    }
+    // clamp active between 320 - 120px
+    font-size: clamp(1.125rem, 1.075rem + 0.25vw, 1.25rem);
 }
