--- a/src/sass/flx/_home.scss
+++ b/src/sass/flx/_home.scss
@@ -7,7 +7,7 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     width: 100%;
     max-width: var(--site-width);
     padding-top: var(--site-space-lg);
-    padding-bottom: var(--site-space-lg);
+    padding-bottom: 7.5rem; // 120px
     padding-left: var(--site-pad-small);
     padding-right: var(--site-pad-small);
     margin-left: auto;
@@ -25,10 +25,7 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     }
 
     > .row {
-        margin-bottom: 3rem;
-
         @media (min-width: 480px) {
-            margin-bottom: var(--drop-medium);
             display: grid;
             grid-template-columns: repeat(12, 1fr);
             grid-column-gap: var(--gutter-small);
@@ -39,17 +36,32 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
         }
 
         @media (min-width: 960px) {
-            margin-bottom: var(--drop-big);
             grid-column-gap: var(--gutter-large);
         }
     }
 
-    .row:last-of-type {
-        margin-bottom: 0px;
+    .row:nth-of-type(1) {
+        margin-bottom: 244px;
     }
 
-    .thumb {
-        // styles
+    .row:nth-of-type(2) {
+        margin-bottom: 160px;
+    }
+
+    .row:nth-of-type(3) {
+        margin-bottom: 200px;
+    }
+
+    .row:nth-of-type(4) {
+        margin-bottom: 180px;
+    }
+
+    .row:nth-of-type(5) {
+        margin-bottom: 160px;
+    }
+
+    .row:nth-of-type(6) {
+        margin-bottom: 0;
     }
 
     img {
@@ -64,13 +76,9 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     .quote {
         margin-bottom: var(--drop-medium);
         font-family: var(--titling);
-        font-size: 1.375rem;
+        font-size: clamp(1.375rem, 0.825rem + 2.75vw, 2.75rem);
         line-height: 1.35;
         color: var(--white);
-
-        @media (min-width: 960px) {
-            font-size: var(--font-medium);
-        }
     }
 
     blockquote {
@@ -94,9 +102,8 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     }
 
     .client {
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.25rem;
         font-family: var(--copy-med);
-        font-size: var(--font-base-plus);
         line-height: 1.1;
         color: var(--white);
 
@@ -108,11 +115,9 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
 
     .position,
     .category {
-        margin-bottom: 1.5rem;
+        margin-bottom: var(--mb-drop-base);
         display: block;
         font-family: var(--copy);
-        font-size: var(--font-base);
-        //text-transform: uppercase;
         line-height: var(--lh-small);
         color: var(--work-meta);
 
@@ -124,12 +129,11 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     .description {
         margin-bottom: var(--drop-medium);
         font-family: var(--copy);
-        font-size: var(--font-small);
         line-height: var(--lh-small);
         color: var(--work-meta);
 
         @media (min-width: 880px) {
-            font-size: var(--font-base-plus);
+            margin-bottom: 0;
         }
     }
 
@@ -166,7 +170,6 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     /* three col layout ------------------------------------------------------------ */
     .three-cols {
         grid-template-rows: 1fr;
-        // margin-bottom: 15.25rem;
 
         video {
             width: 100%;
@@ -231,7 +234,6 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     /* three col layout ------------------------------------------------------------ */
     .three-cols-alt {
         grid-template-rows: 1fr;
-        // margin-bottom: 15.25rem;
 
         video {
             width: 100%;
@@ -262,28 +264,23 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
                 }
             }
 
-            img {
-                padding-top: var(--offset-medium);
-            }
-
             .link {
                 color: var(--white);
             }
         }
 
         .col-2-alt {
-            //padding-top: var(--offset-medium);
             grid-column: 3 / 10;
             grid-row: 1 / -1;
 
             @media (min-width: 960px) {
-                margin-top: 544px;
+                padding-top: 448px;
                 grid-column: 3 / 10;
             }
         }
 
         .col-3-alt {
-            padding-top: 98px;
+            //padding-top: 98px;
             grid-column: 9 / 13;
             grid-row: 1 / -1;
             display: none;
@@ -298,10 +295,14 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
 
             .description {
                 max-width: 70%;
-                margin-bottom: var(--drop-small);
+                margin-bottom: 7.5rem;
 
                 @media (min-width: 960px) {
                     max-width: 60%;
+                }
+
+                @media (min-width: 1120px) {
+                    max-width: 100%;
                 }
             }
 
