--- a/src/sass/page-sections/_newsroom.scss
+++ b/src/sass/page-sections/_newsroom.scss
@@ -33,7 +33,8 @@
         .title {
             margin-bottom: 1.5rem;
             grid-column: 2 / 3;
-            font-size: clamp(1.25rem, 2.5vw, 2.75rem);
+            font-size: clamp(1.25rem, 0.65rem + 3vw, 2.75rem); // clamp active between 320 and 1120px
+            line-height: normal;
             color: var(--black);
         }
 
@@ -41,8 +42,9 @@
             margin-bottom: 1.5rem;
             display: block;
             grid-column: 2 / 3;
-            font-family: 'cabinet-medium';
-            font-size: var(--font-small);
+            font-family: var(--copy-med);
+            font-size: clamp(0.875rem, 0.725rem + 0.75vw, 1.25rem); // clamp active between 320 and 1120px
+            font-weight: var(--weight-regular-plus);
             text-transform: uppercase;
             color: var(--black);
         }
