--- a/src/sass/page-sections/_get-in-touch.scss
+++ b/src/sass/page-sections/_get-in-touch.scss
@@ -131,7 +131,7 @@
     input[type='submit'] {
         width: 100%;
         font-family: var(--copy-med) !important;
-        font-size: 16px;
+        font-size: var(--font-small);
         text-transform: uppercase;
         color: var(--black) !important;
         background-color: transparent;
