--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -40,8 +40,9 @@ footer {
 
         .meta,
         h3 {
+            margin-bottom: 0.25rem;
             font-family: var(--copy);
-            font-size: var(--font-root-plus);
+            font-size: var(--font-base);
             text-transform: uppercase;
             color: var(--work-meta);
         }
@@ -65,11 +66,10 @@ footer {
         grid-column: 1 / 7;
 
         .text {
-            font-size: var(--font-root-plus);
             color: var(--work-meta);
 
             @media (min-width: 480px) {
-                width: 32ch;
+                width: 29ch;
             }
         }
     }
@@ -85,14 +85,24 @@ footer {
 
         .contact {
             margin-bottom: 48px;
-            grid-column: 1 / 4;
+            grid-column: 1 / 5;
 
-            .link {
+            @media (min-width: 960px) {
+                margin-bottom: 0;
+            }
+
+            li {
+                margin-bottom: var(--mb-drop-medium);
+                margin-bottom: 20px;
+            }
+
+            li:last-of-type p {
                 margin-bottom: var(--drop-small);
             }
 
             .join-us-statement {
-                margin-bottom: var(--drop-small);
+                max-width: 27ch;
+                font-size: var(--font-base);
                 color: var(--work-meta);
             }
         }
@@ -114,11 +124,15 @@ footer {
             address {
                 font-style: normal;
             }
+
+            p {
+                font-size: var(--font-base);
+            }
         }
     }
 
     .footer-supplementary {
-        margin-top: 12rem;
+        margin-top: 9.5rem;
         grid-column: 1 / -1;
 
         display: grid;
@@ -141,12 +155,18 @@ footer {
 
         .member-logos {
             .logos {
-                margin-top: var(--mb-drop-base);
+                width: 312px;
+                height: auto;
+                margin-top: 0.25rem;
                 display: flex;
                 justify-content: space-between;
             }
 
-            img:last-of-type {
+            h3 {
+                font-size: var(--font-base-plus);
+            }
+
+            img:first-of-type {
                 margin-right: 1.5rem;
             }
 
