--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -5,10 +5,12 @@
 .banner-home {
     position: relative;
     width: 100%;
+    max-width: 1440px;
     padding-left: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
     padding-right: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
     padding-top: clamp(4rem, -4.883rem + 27.333vw, 14.25rem);
     padding-bottom: clamp(5rem, -8.65rem + 42vw, 20.75rem);
+    margin: 0 auto;
     background-color: var(--off-white);
 
     h1.statement {
