--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -1,10 +1,12 @@
+/* work
+----------------------------------------------------------------------------- */
 /* grid work-v1.0 : this has three sections:
 
 filters
 our-work__featured
 our-work__archive
 ---------------------------------------------------------------------------------------------------------------------- */
-.our-work {
+.work {
     .filters {
         margin-bottom: 2.25rem;
         display: grid;
