--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -63,7 +63,7 @@ our-work__archive
         }
     }
 
-    /* curated grid
+    /* our-work__featured
     ------------------------------------------------------------------------- */
     .our-work__featured {
         @media (min-width: 960px) {
@@ -153,7 +153,7 @@ our-work__archive
         }
     }
 
-    /* archive grid
+    /* our-work__archive
     ------------------------------------------------------------------------- */
     .our-work__archive {
         @media (min-width: 600px) {
@@ -167,7 +167,7 @@ our-work__archive
             position: relative;
 
             @media (min-width: 600px) {
-                margin-bottom: 4rem;
+                margin-bottom: 56px;
                 grid-column: span 12;
             }
 
@@ -189,12 +189,16 @@ our-work__archive
             }
         }
 
+        article {
+            margin-bottom: 0;
+        }
+
         img {
             width: 100%;
             margin-bottom: 0.5rem;
         }
 
-        .link {
+        h3 {
             font-weight: var(--weight-regular-plus);
             color: var(--mid-black);
         }
