--- a/src/sass/flx/_what-we-do.scss
+++ b/src/sass/flx/_what-we-do.scss
@@ -13,13 +13,13 @@
 
     .service {
         position: relative;
-        margin-bottom: 5.375rem;
+        margin-bottom: 6rem;
 
         &:before {
             position: relative;
             width: 176px;
             height: 1.5px;
-            margin-bottom: var(--drop-small);
+            margin-bottom: 1.25rem;
             display: block;
             content: '';
             background-color: var(--mid-black);
@@ -38,14 +38,14 @@
         }
 
         .image {
-            margin-bottom: var(--mb-drop-medium);
+            // margin-bottom: var(--mb-drop-medium);
         }
 
         // layout media queries --------------------------------------------------
         @media (min-width: 880px) {
             .container__grid {
                 grid-template-columns: repeat(12, 1fr);
-                grid-gap: 48px;
+                column-gap: 48px;
             }
 
             .image {
@@ -67,13 +67,17 @@
         // style elements -------------------------------------------------------
         .title {
             margin-bottom: 2rem;
-            font-size: clamp(2rem, 7.5vw, 4rem);
+            font-size: clamp(2rem, 1.2rem + 4vw, 4rem);
             line-height: 1.09375;
             color: var(--black);
+
+            @media (min-width: 880px) {
+                margin-bottom: 3.5rem;
+            }
         }
 
         .description {
-            margin-bottom: 68px;
+            margin-bottom: var(--drop-medium);
             font-size: var(--font-base);
             line-height: var(--lh-medium);
             color: var(--mid-black);
@@ -84,15 +88,14 @@
         }
 
         .subtitle {
-            margin-bottom: var(--drop-base);
+            margin-bottom: 0.75rem;
             font-family: var(--copy);
-            font-size: var(--font-base-plus);
             text-transform: uppercase;
             color: var(--mid-black);
         }
 
         ul {
-            margin-bottom: 60px;
+            margin-bottom: 2.875rem;
         }
 
         li {
