--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -17,7 +17,7 @@
         width: 25ch;
         max-width: 1296px;
         font-family: var(--titling);
-        font-size: clamp(2.125rem, 7.5vw, 4.5rem);
+        font-size: clamp(2.125rem, 0.786rem + 3.571vw, 4rem);
         font-weight: 400;
         line-height: 1.08;
     }
