Case study: TranslateY applied to h2

--- a/src/sass/post-types/case-study.scss
+++ b/src/sass/post-types/case-study.scss
@@ -288,6 +288,7 @@
         }
 
         .title {
+            transform: translateY(-4px);
             margin-bottom: var(--drop-medium);
         }
 
