--- a/src/sass/type/_typography.scss
+++ b/src/sass/type/_typography.scss
@@ -41,7 +41,8 @@ h4,
 }
 
 p,
-span {
+span,
+li {
     // clamp active between 320 - 120px
     font-size: clamp(1.125rem, 1.075rem + 0.25vw, 1.25rem);
 }
