Overlays: who we are, image offset adjusted

--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -243,7 +243,7 @@
     /* image-offset
     ------------------------------------------------------------------------- */
     .image-offset {
-        margin-bottom: var(--drop-large);
+        margin-bottom: 3.875rem;
 
         .grid-offset {
             display: grid;
