Sitewide: first pass re-instating contain and grid classes, rules removed from blocks

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -96,6 +96,7 @@
     --mb-drop-medium: 1.5rem;
     --mb-drop-double: 2rem;
     --mb-drop-large: 3rem;
+    --mb-drop-big: 6rem;
 
     /* Effects
     --------------------------------------------------------------------------------------------------------------- */
