--- a/src/sass/tools/_utilities.scss
+++ b/src/sass/tools/_utilities.scss
@@ -61,27 +61,27 @@
 
 /* inline colour classses
 ----------------------------------------------------------------------------- */
-.off-white {
-    // this should probs be in variables to make it easier for other folks..
-    background-color: var(--off-white);
-}
+// .off-white {
+//     // this should probably be in variables to make it easier for other folks..
+//     background-color: var(--off-white);
+// }
 
 /* buttons and pills
 ----------------------------------------------------------------------------- */
 // global styles that for basic buttons, pills and associated colours
 
-.slab {
-    // add styles
-}
+// .slab {
+//     // add styles
+// }
 
-.pill {
-    padding: 12px 11px;
-    border-radius: 19.05px;
-    font-size: var(--font-small);
-    text-transform: uppercase;
-    color: var(--black);
-    background-color: var(--mid-grey);
-}
+// .pill {
+//     padding: 12px 11px;
+//     border-radius: 19.05px;
+//     font-size: var(--font-small);
+//     text-transform: uppercase;
+//     color: var(--black);
+//     background-color: var(--mid-grey);
+// }
 
 /* inline effects
 ----------------------------------------------------------------------------- */
