--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -170,16 +170,6 @@
     .text-image-full-width {
         padding-top: 6rem;
 
-        .container {
-            display: grid;
-            grid-template-columns: 1fr;
-
-            @media (min-width: 960px) {
-                grid-template-columns: repeat(12, 1fr);
-                grid-column-gap: var(--gutter-large);
-            }
-        }
-
         .text-left {
             .rich-text {
                 @media (min-width: 960px) {
@@ -217,7 +207,7 @@
         .section-title {
             margin-bottom: var(--mb-drop-base);
             font-family: var(--copy);
-            font-size: var(--font-base-plus);
+            font-size: clamp(1.125rem, 1.075rem + 0.25vw, 1.25rem);
             text-transform: uppercase;
             line-height: var(--lh-medium);
             color: var(--mid-black);
@@ -226,7 +216,7 @@
         p {
             margin-bottom: var(--mb-drop-large);
             font-family: var(--titling);
-            font-size: clamp(2rem, 7.5vw, 4rem);
+            font-size: clamp(2.125rem, 0.786rem + 3.571vw, 4rem);
             line-height: 1.2;
             color: var(--black);
 
@@ -270,7 +260,7 @@
             .secondary-image {
                 grid-column: 1 / 7;
                 grid-row: 6 / -1;
-                //transform: translateY(-20px);
+                transform: translate(4px, -4px);
             }
         }
     }
@@ -278,13 +268,12 @@
     /* image-grid four cols
     ------------------------------------------------------------------------- */
     .four-cols {
-        padding-top: 92px;
+        padding-top: 5.75rem; // 92px
         background-color: var(--black);
 
         .introduction {
             display: flex;
             flex-direction: column;
-
             color: var(--white);
 
             @media (min-width: 960px) {
@@ -295,7 +284,6 @@
 
         .title {
             margin-bottom: var(--mb-drop-base);
-            font-size: clamp(2rem, 4.5vw, 2.75rem);
         }
 
         p {
@@ -310,7 +298,7 @@
         }
 
         .images {
-            padding-top: 3rem;
+            padding-top: var(--site-space-md);
             display: grid;
             grid-template-columns: 1fr;
             justify-items: center;
@@ -351,8 +339,7 @@
     /* image-grid five cols
     ------------------------------------------------------------------------- */
     .five-cols {
-        padding-top: 6.875rem;
-        //padding-botto: 4.25rem;
+        padding-top: 6.875rem; // 110px
         background-color: var(--white);
 
         .introduction {
@@ -368,7 +355,6 @@
 
         .section-title {
             margin-bottom: var(--mb-drop-base);
-            font-size: clamp(2rem, 4.5vw, 2.75rem);
         }
 
         p {
@@ -395,7 +381,6 @@
         }
 
         .images {
-            //margin-bottom: 3rem;
             display: grid;
             grid-template-columns: 1fr;
 
@@ -409,14 +394,12 @@
         .rh-col__images {
             margin-bottom: 52px;
             display: grid;
-            //   justify-items: center;
         }
 
         @media (min-width: 880px) {
             .lh-col__images,
             .rh-col__images {
                 column-gap: var(--gutter-large);
-                //    justify-items: unset;
             }
 
             .lh-col {
@@ -469,7 +452,6 @@
 
     /* awards overlay
     ------------------------------------------------------------------------- */
-
     .awards-overlay {
         position: fixed;
         top: 0;
