--- a/src/sass/utilities/_mixins.scss
+++ b/src/sass/utilities/_mixins.scss
@@ -12,7 +12,7 @@
     display: grid;
     grid-template-columns: 1fr;
 
-    @media (min-width: 960px) {
+    @media (min-width: 880px) {
         grid-template-columns: repeat(12, 1fr);
         grid-column-gap: var(--gutter-large);
     }
@@ -24,6 +24,7 @@
     padding-left: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
     padding-right: clamp(1.5rem, 0.3rem + 6vw, 4.5rem);
     margin: 0 auto;
+    border: 5px solid red;
 }
 
 @mixin horizontal-space {
